@@ -1,7 +1,7 @@
+import org.junit.After;
 import org.junit.Assert;
+import org.junit.Before;
 import org.junit.Test;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
 import org.junit.runners.Parameterized.Parameter;
@@ -22,59 +22,58 @@ public class TesteRegrasCadastro {
 
     @Parameter
     public String nome;
-    @Parameter(value=1)
+    @Parameter(value = 1)
     public String sobrenome;
-    @Parameter(value=2)
+    @Parameter(value = 2)
     public String sexo;
-    @Parameter(value=3)
+    @Parameter(value = 3)
     public List<String> comidas;
-    @Parameter(value=4)
+    @Parameter(value = 4)
     public String[] esportes;
-    @Parameter(value=5)
+    @Parameter(value = 5)
     public String msg;
 
-
-    @BeforeEach
+    @Before
     public void inicializa() {
-        System.setProperty("webdriver.chrome.driver", "C:/Users/AntonioCamiloGomesdo/drivers/chromedriver.exe");
+        System.setProperty("webdriver.chrome.driver", "src/main/resources/drivers/chromedriver.exe");
         driver = new ChromeDriver();
         driver.get("file:///C:/Users/AntonioCamiloGomesdo/Desktop/componentes.html");
         dsl = new DSL(driver);
         page = new CampoTreinamentoPage(driver);
     }
 
-    @AfterEach
+    @After
     public void finaliza() throws InterruptedException {
         Thread.sleep(1000);
-        driver.quit();
+//        driver.quit();
     }
 
     @Parameters
-    public static Collection<Object[]> getCollection(){
-        return Arrays.asList(new Object[][] {
-                {" ", " ", " ", List.of(), new String[]{}, "Nome eh obrigatorio"},
-                {"Wagner", "", "", List.of(), new String[]{}, "Sobrenome eh obrigatorio"},
-                {"Wagner", "Costa", "", List.of(), new String[]{}, "Sexo eh obrigatorio"},
-                {"Wagner", "Costa", "Masculino", Arrays.asList("Carne", "Vegetariano"), new String[]{}, "Tem certeza que voce eh vegetariano?"},
-                {"Wagner", "Costa", "Masculino", List.of("Carne"), new String[]{"Karate", "O que eh esporte?"}, "Voce faz esporte ou nao?"}
+    public static Collection<Object[]> getCollection() {
+        return Arrays.asList(new Object[][]{
+                {"nome", "sobrenome", "Masculino", List.of("Pizza"), new String[]{}, "Nome eh obrigatorio"},
+//                {"Wagner", "", "",  Arrays.asList(), new String[]{}, "Sobrenome eh obrigatorio"},
+//                {"Wagner", "Costa", "",  Arrays.asList(), new String[]{}, "Sexo eh obrigatorio"},
+//                {"Wagner", "Costa", "Masculino",  Arrays.asList("Carne", "Vegetariano"), new String[]{}, "Tem certeza que voce eh vegetariano?"},
+//                {"Wagner", "Costa", "Masculino",  Arrays.asList("Carne"), new String[]{"Karate", "O que eh esporte?"}, "Voce faz esporte ou nao?"}
         });
     }
 
     @Test
-    public void deveValidarRegras(){
+    public void deveValidarRegras() {
         page.setNome(nome);
         page.setSobrenome(sobrenome);
-        if(sexo.equals("Masculino")) {
+        if (sexo.equals("Masculino")) {
             page.setSexoMasculino();
         }
-        if(sexo.equals("Feminino")) {
+        if (sexo.equals("Feminino")) {
             page.setSexoFeminino();
         }
-        if(comidas.contains("Carne")) page.setComidaFavoritaCarne();
-        if(comidas.contains("Pizza")) page.setComidaFavoritaPizza();
-        if(comidas.contains("Vegetariano")) page.setComidaFavoritaVegetariano();
+        if (comidas.contains("Carne")) page.setComidaFavoritaCarne();
+        if (comidas.contains("Pizza")) page.setComidaFavoritaPizza();
+        if (comidas.contains("Vegetariano")) page.setComidaFavoritaVegetariano();
         page.setEsporte(Arrays.toString(esportes));
-        page.botaoCadastrar();
+//        page.botaoCadastrar();
         System.out.println(msg);
         Assert.assertEquals(msg, dsl.alertaObterTextoAceita(msg));
     }
